Squash bugs, resize stuff for mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,3 +5,9 @@
   padding: 2rem;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  #root {
+    padding: 0;
+  }
+}
